--- a/app/src/main/res/layout/fragment_community_detail.xml
+++ b/app/src/main/res/layout/fragment_community_detail.xml
@@ -139,6 +139,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:checked="true"
+                                android:clickable="true"
                                 app:srcCompat="@drawable/icon_thumb" />
 
                             <TextView
