--- a/app/src/main/res/layout/fragment_view_f_a_q.xml
+++ b/app/src/main/res/layout/fragment_view_f_a_q.xml
@@ -40,87 +40,105 @@
                 tools:layout_editor_absoluteY="22dp" />
         </com.google.android.material.appbar.MaterialToolbar>
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingHorizontal="20dp">
+            android:layout_marginHorizontal="20dp"
+            android:orientation="vertical">
 
-            <LinearLayout
+
+            <TextView
+                android:id="@+id/viewFAQTextViewTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="질문"
+                android:textSize="16dp"
+                android:textStyle="bold" />
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="clear_text"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false">
 
-                <TextView
-                    android:id="@+id/viewFAQTextViewTitle"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/viewFAQContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:fontFamily="@font/notosans_semibold"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:fontFamily="@font/notosans_medium"
+                    android:gravity="top"
                     android:includeFontPadding="false"
-                    android:text="질문"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
+                    android:inputType="none"
+                    android:text="질문입니다."
+                    android:textSize="14dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
+            <TextView
+                android:id="@+id/viewFAQTextViewAnswer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="내용"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="clear_text"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/viewFAQTextViewAnsContent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:endIconMode="clear_text"
-                    app:hintAnimationEnabled="false"
-                    app:hintEnabled="false">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/viewFAQContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/notosans_medium"
-                        android:gravity="top"
-                        android:includeFontPadding="false"
-                        android:inputType="none"
-                        android:focusable="false"
-                        android:cursorVisible="false"
-                        android:text="질문입니다."
-                        android:textSize="14dp" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <TextView
-                    android:id="@+id/viewFAQTextViewAnswer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="4dp"
-                    android:fontFamily="@font/notosans_semibold"
+                    android:layout_height="250dp"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:fontFamily="@font/notosans_medium"
+                    android:gravity="top"
                     android:includeFontPadding="false"
-                    android:text="내용"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:endIconMode="clear_text"
-                    app:hintAnimationEnabled="false"
-                    app:hintEnabled="false">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/viewFAQTextViewAnsContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="250dp"
-                        android:fontFamily="@font/notosans_medium"
-                        android:gravity="top"
-                        android:includeFontPadding="false"
-                        android:inputType="none"
-                        android:focusable="false"
-                        android:cursorVisible="false"
-                        android:text="내용 입니다."
-                        android:textSize="14dp" />
-                </com.google.android.material.textfield.TextInputLayout>
+                    android:inputType="none"
+                    android:text="내용 입니다."
+                    android:textSize="14dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-            </LinearLayout>
+        </LinearLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        </ScrollView>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/viewFAQButton"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/style_pointbutton_radias"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="확인"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.979" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </LinearLayout>
