--- a/app/src/main/res/layout/fragment_view_my_q.xml
+++ b/app/src/main/res/layout/fragment_view_my_q.xml
@@ -40,120 +40,139 @@
                 tools:layout_editor_absoluteY="22dp" />
         </com.google.android.material.appbar.MaterialToolbar>
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingHorizontal="20dp">
+            android:layout_marginHorizontal="20dp"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/viewMyQTextViewQType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="아파트톡의 중심은 항상 고객님입니다."
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/viewMyQTextViewQType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:includeFontPadding="false"
-                    android:text="아파트톡의 중심은 항상 고객님입니다."
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/viewMyQTextViewQTypeInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/notosans_regular"
+                android:includeFontPadding="false"
+                android:text="이용하며 느끼는 불편한 점이나 바라는 점을 알려주세요 \n소중한 의견으로 한 걸음 더 다가가는 아파트톡이 되겠습니다"
+                android:textSize="14dp" />
 
-                <TextView
-                    android:id="@+id/viewMyQTextViewQTypeInfo"
+            <TextView
+                android:id="@+id/viewMyQTextViewQTypeInfoTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="문의량이 많은 경우 답변은 24시간 이상 소요될 수 있습니다"
+                android:textSize="14dp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/viewMyQTextViewTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="내용"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="clear_text"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/viewMyQTextViewContent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/notosans_regular"
+                    android:layout_height="200dp"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:fontFamily="@font/notosans_medium"
+                    android:gravity="top"
                     android:includeFontPadding="false"
-                    android:text="이용하며 느끼는 불편한 점이나 바라는 점을 알려주세요 \n소중한 의견으로 한 걸음 더 다가가는 아파트톡이 되겠습니다"
+                    android:inputType="none"
+                    android:text="질문한 내용입니다."
                     android:textSize="14dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/viewMyQTextViewQTypeInfoTime"
+            <TextView
+                android:id="@+id/viewMyQTextViewAnswer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="답변"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="clear_text"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/viewMyQTextViewAnsContent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/notosans_semibold"
+                    android:layout_height="200dp"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:fontFamily="@font/notosans_medium"
+                    android:gravity="top"
                     android:includeFontPadding="false"
-                    android:text="문의량이 많은 경우 답변은 24시간 이상 소요될 수 있습니다"
-                    android:textStyle="bold"
+                    android:inputType="none"
+                    android:text="답변한 내용입니다."
                     android:textSize="14dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-                <TextView
-                    android:id="@+id/viewMyQTextViewTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="4dp"
-                    android:text="내용"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:includeFontPadding="false"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
+        </LinearLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:endIconMode="clear_text"
-                    app:hintAnimationEnabled="false"
-                    app:hintEnabled="false">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/viewMyQTextViewContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="250dp"
-                        android:gravity="top"
-                        android:text="질문한 내용입니다."
-                        android:fontFamily="@font/notosans_medium"
-                        android:includeFontPadding="false"
-                        android:inputType="none"
-                        android:focusable="false"
-                        android:cursorVisible="false"
-                        android:textSize="14dp" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <TextView
-                    android:id="@+id/viewMyQTextViewAnswer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="4dp"
-                    android:fontFamily="@font/notosans_semibold"
-                    android:includeFontPadding="false"
-                    android:text="답변"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:endIconMode="clear_text"
-                    app:hintAnimationEnabled="false"
-                    app:hintEnabled="false">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/viewMyQTextViewAnsContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="250dp"
-                        android:gravity="top"
-                        android:fontFamily="@font/notosans_medium"
-                        android:includeFontPadding="false"
-                        android:text="답변한 내용입니다."
-                        android:inputType="none"
-                        android:focusable="false"
-                        android:cursorVisible="false"
-                        android:textSize="14dp" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-            </LinearLayout>
-
-        </ScrollView>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/viewMyQButton"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/style_pointbutton_radias"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="확인"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.979" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </LinearLayout>
