--- a/app/src/main/res/layout/item_facility_grid.xml
+++ b/app/src/main/res/layout/item_facility_grid.xml
@@ -3,43 +3,54 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="4dp">
 
     <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="180dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageFacilityGrid"
-            android:layout_width="90dp"
-            android:layout_height="85dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_launcher_foreground" />
 
-        <TextView
-            android:id="@+id/textFacilityGrid"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:gravity="center"
-            android:text="TextView"
-            android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/textViewFacilityGrid"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/notosans_semibold"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:text="상세보기"
-            android:textColor="@color/black" />
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="8dp">
+
+            <TextView
+                android:id="@+id/textFacilityGrid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_regular"
+                android:gravity="center"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textViewFacilityGrid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:fontFamily="@font/notosans_semibold"
+                android:gravity="center"
+                android:text="상세보기"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
