--- a/app/src/main/res/layout/fragment_survey_complete.xml
+++ b/app/src/main/res/layout/fragment_survey_complete.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ui.vote.SurveyCompleteFragment">
 
@@ -12,17 +13,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:gravity="start"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        android:gravity="start"
-        app:titleCentered="true"/>
+        app:titleCentered="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical"
-        android:padding="20dp"
-        android:background="@color/white">
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/surveyCompleteTitle"
@@ -44,123 +45,129 @@
             android:text="항목1"
             android:textSize="16sp" />
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp">
+            android:orientation="horizontal">
 
             <ProgressBar
                 android:id="@+id/surveyCompleteProgressBar"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:max="100"
-                android:progress="0" />
+                android:progress="0"
+                android:layout_marginTop="2dp"/>
 
             <TextView
                 android:id="@+id/surveyCompleteCount1"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="TextView"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
                 android:fontFamily="@font/notosans_semibold"
                 android:includeFontPadding="false"
-                android:textSize="14sp"
-                android:textColor="@color/gray"/>
-
-        </FrameLayout>
+                android:text="TextView"
+                android:textAlignment="viewStart"
+                android:textColor="@color/gray"
+                android:textSize="14sp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/surveyCompleteTextView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="항목2"
-            android:textSize="16sp"
             android:fontFamily="@font/notosans_semibold"
-            android:includeFontPadding="false"/>
+            android:includeFontPadding="false"
+            android:text="항목2"
+            android:textSize="16sp" />
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp">
+            android:layout_height="wrap_content">
 
             <ProgressBar
                 android:id="@+id/surveyCompleteProgressBar2"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:max="100"
-                android:progress="0" />
+                android:progress="0"
+                android:layout_marginTop="2dp"/>
 
             <TextView
                 android:id="@+id/surveyCompleteCount2"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="TextView"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
                 android:fontFamily="@font/notosans_semibold"
                 android:includeFontPadding="false"
-                android:textSize="14sp"
-                android:textColor="@color/gray"/>
-        </FrameLayout>
+                android:text="TextView"
+                android:textAlignment="viewStart"
+                android:textColor="@color/gray"
+                android:textSize="14sp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/surveyCompleteTextView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="항목3"
-            android:textSize="16sp"
             android:fontFamily="@font/notosans_semibold"
-            android:includeFontPadding="false"/>
+            android:includeFontPadding="false"
+            android:text="항목3"
+            android:textSize="16sp" />
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp">
+            android:layout_height="wrap_content">
 
             <ProgressBar
                 android:id="@+id/surveyCompleteProgressBar3"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:max="100"
-                android:progress="0" />
+                android:progress="0"
+                android:layout_marginTop="2dp"/>
 
             <TextView
                 android:id="@+id/surveyCompleteCount3"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="TextView"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
                 android:fontFamily="@font/notosans_semibold"
                 android:includeFontPadding="false"
-                android:textSize="14sp"
-                android:textColor="@color/gray"/>
-        </FrameLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_marginVertical="20dp"
-            android:background="@color/gray" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="설문조사가 완료되었습니다."
-            android:textSize="20sp"
-            android:fontFamily="@font/notosans_semibold"
-            android:includeFontPadding="false"
-            android:gravity="center"
-            android:layout_marginTop="20dp"/>
+                android:text="TextView"
+                android:textAlignment="viewStart"
+                android:textColor="@color/gray"
+                android:textSize="14sp" />
+        </LinearLayout>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_marginVertical="20dp"
+        android:background="@color/gray" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/notosans_semibold"
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:text="설문조사가 완료되었습니다."
+        android:textSize="20sp" />
 
 
 </LinearLayout>
