--- a/app/src/main/res/layout/fragment_survey_write.xml
+++ b/app/src/main/res/layout/fragment_survey_write.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:padding="20dp"
+    android:orientation="vertical"
     tools:context="ui.vote.SurveyWriteFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -13,28 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:gravity="start"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        android:gravity="start"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:titleCentered="true"/>
+        app:titleCentered="true" />
 
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/surveyWriteToolbar"
-        app:layout_constraintBottom_toTopOf="@id/surveyWriteButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="20dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -58,11 +52,11 @@
                 android:id="@+id/surveyWriteTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="최소 2개 이상의 항목을 작성해주세요"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/notosans_semibold"
                 android:includeFontPadding="false"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/gray"/>
+                android:text="최소 2개 이상의 항목을 작성해주세요"
+                android:textColor="@color/gray" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -124,11 +118,11 @@
                 android:id="@+id/surveyWriteTextView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="어떤 내용의 설문조사인지 알려주세요"
-                android:fontFamily="@font/notosans_semibold"
                 android:layout_marginTop="10dp"
+                android:fontFamily="@font/notosans_semibold"
                 android:includeFontPadding="false"
-                android:textColor="@color/gray"/>
+                android:text="어떤 내용의 설문조사인지 알려주세요"
+                android:textColor="@color/gray" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -156,28 +150,28 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="16dp">
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/surveyWriteTextViewStartDate"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="시작 날짜"
                     android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"/>
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:text="시작 날짜" />
 
                 <TextView
                     android:id="@+id/surveyWriteTextViewEndDate"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="종료 날짜"
                     android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"/>
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:text="종료 날짜" />
             </LinearLayout>
 
             <LinearLayout
@@ -190,20 +184,20 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="2019-03-01"
                     android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"/>
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:text="2019-03-01" />
 
                 <TextView
                     android:id="@+id/surveyWriteTextViewEndDate1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="2019-03-01"
                     android:fontFamily="@font/notosans_regular"
-                    android:includeFontPadding="false"/>
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:text="2019-03-01" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
@@ -212,13 +206,13 @@
         android:id="@+id/surveyWriteButton"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="설문조사 만들기"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/style_pointbutton_radias"
+        android:elevation="0dp"
         android:fontFamily="@font/notosans_semibold"
         android:includeFontPadding="false"
-        android:background="@drawable/style_pointbutton_radias"
-        android:textSize="16sp"
+        android:text="설문조사 만들기"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textSize="16sp" />
+</LinearLayout>
