[fix] 전체메뉴 scrollbar 제거

--- a/app/src/main/res/layout/fragment_entire_menu.xml
+++ b/app/src/main/res/layout/fragment_entire_menu.xml
@@ -35,6 +35,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbarMenu">
 
@@ -205,8 +206,9 @@
                 style="@style/Widget.Material3.Button.TextButton.Icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="start|center_vertical"
                 android:text="방문 주차 예약"
                 android:textColor="@color/black"
@@ -220,7 +222,8 @@
                 style="@style/Widget.Material3.Button.TextButton.Icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="start|center_vertical"
                 android:text="주민 투표"
                 android:textColor="@color/black"
@@ -234,7 +237,8 @@
                 style="@style/Widget.Material3.Button.TextButton.Icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="start|center_vertical"
                 android:text="소방 점검"
                 android:textColor="@color/black"
@@ -266,8 +270,9 @@
                 style="@style/Widget.Material3.Button.TextButton.Icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="start|center_horizontal"
                 android:text="관리사무소 문의"
                 android:textColor="@color/black"
@@ -281,7 +286,8 @@
                 style="@style/Widget.Material3.Button.TextButton.Icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="start|center_horizontal"
                 android:text="안내 방송"
                 android:textColor="@color/black"
@@ -295,7 +301,8 @@
                 style="@style/Widget.Material3.Button.TextButton.Icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="start|center_horizontal"
                 android:text="아파트 일정"
                 android:textColor="@color/black"
@@ -309,7 +316,8 @@
                 style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="start|center_horizontal"
                 android:text="아파트 운영정보"
                 android:textColor="@color/black"
@@ -330,8 +338,9 @@
                 style="@style/Widget.Material3.Button.TextButton.Icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="start|center_horizontal"
                 android:text="로그아웃"
                 android:textColor="@color/black"
