--- a/app/src/main/res/layout/fragment_inquiry_write.xml
+++ b/app/src/main/res/layout/fragment_inquiry_write.xml
@@ -114,13 +114,13 @@
             android:id="@+id/inquiryWriteButtonSubmit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/second"
-            android:text="등록하기"
-            android:textSize="18sp"
+            android:background="@drawable/style_pointbutton_radias"
+            android:backgroundTint="@color/third"
             android:fontFamily="@font/notosans_semibold"
             android:includeFontPadding="false"
+            android:text="등록하기"
             android:textColor="@android:color/black"
-            android:background="@drawable/style_pointbutton_radias"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
