--- a/app/src/main/res/layout/activity_inquiry.xml
+++ b/app/src/main/res/layout/activity_inquiry.xml
@@ -5,11 +5,12 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.inquiry.InquiryActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/inquiryContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
