--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -13,10 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:gravity="start"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        android:gravity="start"
-        app:titleCentered="true"/>
+        app:navigationIcon="@drawable/icon_back"
+        app:title="설문조사"
+        app:titleCentered="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
